# hugo-bot

./: Dockerfile  README.md  pyproject.toml
additional/: roles.py
hugo/: __main__.py
